# PSLG-Obtuse-Triangle-Minimization-V3

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  cmake_install.cmake  count_categories.py  create_table_A.py  create_table_B.py  create_tables.py  ergasia3_report.docx  ex.cpp  extract_best_method_per_category.py  input_ls.json  input_sa.json  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  report.docx  run_verify.py  test_instances.py  verify.py
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h
instances_combinations_values/: compare_randomization.xlsx  instances_A.txt  instances_B.txt  instances_C.txt  instances_D.txt  instances_E.txt  method_averages.xlsx
old_tests_and_outputs/: input_ant.json
outputs/: output1.json  output1.json   output2.json  output_ant.json  temp.json
test_categories/: instances_A.txt  instances_B.txt  instances_C.txt  instances_D.txt  instances_E.txt
test_instances_ant/: instance_test_10.json  instance_test_11.json  instance_test_12.json  instance_test_13.json  instance_test_14.json  instance_test_15.json  instance_test_4.json  instance_test_5.json  instance_test_8.json
test_instances_ls/: instance_test_14.json  instance_test_16.json  instance_test_2.json  instance_test_4.json  instance_test_5.json  instance_test_6.json  instance_test_9.json
test_instances_sa/: instance_test_10.json  instance_test_11.json  instance_test_13.json  instance_test_14.json  instance_test_15.json  instance_test_2.json  instance_test_3.json  instance_test_6.json  instance_test_8.json  instance_test_9.json
tests_ant/: instance_1.json  instance_2.json  (+3 more)
(+304 files in other folders)
